# go/api_gig.go
@@ -11,14 +11,27 @@
 package openapi
 
 import (
+	"log"
 	"net/http"
+	"os"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
 // AddGig - Add a new gig to the store
 func AddGig(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{})
+	var mygig Gig
+
+	// Call BindJSON to bind the received JSON to
+	// newAlbum.
+	if err := c.BindJSON(&mygig); err != nil {
+		return
+	}
+
+	// Add the new album to the slice.
+	gigs = append(gigs, mygig)
+	c.IndentedJSON(http.StatusCreated, mygig)
 }
 
 // DeleteGig - Deletes a gig
@@ -28,18 +41,41 @@ func DeleteGig(c *gin.Context) {
 
 // FindGigsByStatus - Finds Gigs by status
 func FindGigsByStatus(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{})
-}
+	file, err := os.OpenFile("logs.txt", os.O_APPEND|os.O_CREATE|os.O_WRONLY, 0666)
+	if err != nil {
+		log.Fatal(err)
+	}
+	log.SetOutput(file)
+	log.Println(c.GetQuery("status"))
+	status, _ := c.GetQuery("status")
+	// Loop over the list of albums, looking for
+	// an album whose ID value matches the parameter.
+	log.Println(status)
 
-// FindGigsByTags - Finds Gigs by tags
-// Deprecated
-func FindGigsByTags(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{})
+	tmp := []Gig{}
+
+	for _, a := range gigs {
+		if a.Status == status {
+			tmp = append(tmp, a)
+		}
+	}
+
+	c.IndentedJSON(http.StatusOK, tmp)
 }
 
 // GetGigById - Find gig by ID
 func GetGigById(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{})
+	id, _ := strconv.ParseInt(c.Param("gigId"), 10, 0)
+	// Loop over the list of albums, looking for
+	// an album whose ID value matches the parameter.
+
+	for _, a := range gigs {
+		if a.Id == id {
+			c.IndentedJSON(http.StatusOK, a)
+		}
+	}
+	c.IndentedJSON(http.StatusNotFound, gin.H{"message": "album not found"})
+
 }
 
 // UpdateGigWithForm - Updates a gig in the store with form data
